[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "edlio"
author = "Matthias Klumpp"
author-email = "matthias@tenstral.net"
home-page = "https://edl.readthedocs.io/"
description-file = "README.md"

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    'C', 'R',
    'fixme',
    'unused-argument',
    'logging-format-interpolation',
    'protected-access',
    'broad-except',
    'redefined-builtin',
]

[tool.pylint.reports]
score = 'no'

[tool.pylint.typecheck]
ignored-modules = [
    'cv2',
]
